--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f11d5a80-df2b-4899-8c02-6a568997dcec",
    "metadata": {},
    "outputs": [
@@ -10,23 +10,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialized empty Git repository in /Users/markxu/Desktop/github-repo/COMP432/project/.git/\n",
+      "Reinitialized existing Git repository in /Users/markxu/Desktop/github-repo/COMP432/project/.git/\n",
+      "error: remote origin already exists.\n",
       "On branch main\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\t\u001b[31mmodified:   main.ipynb\u001b[m\n",
       "\n",
-      "No commits yet\n",
-      "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\t\u001b[31m.ipynb_checkpoints/\u001b[m\n",
-      "\t\u001b[31mmain.ipynb\u001b[m\n",
-      "\n",
-      "nothing added to commit but untracked files present (use \"git add\" to track)\n",
-      "[main (root-commit) cd10836] Initial commit\n",
-      " 2 files changed, 12 insertions(+)\n",
-      " create mode 100644 .ipynb_checkpoints/main-checkpoint.ipynb\n",
-      " create mode 100644 main.ipynb\n",
-      "remote: Invalid username or password.\n",
-      "fatal: Authentication failed for 'https://github.com/Clementxu8268/COMP432_Project_Group_L.git/'\n"
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n",
+      "[main 6a6dc80] Initial commit\n",
+      " 1 file changed, 76 insertions(+), 2 deletions(-)\n",
+      "Username for 'https://github.com': "
      ]
     }
    ],
