--- a/main.ipynb
+++ b/main.ipynb
@@ -2,29 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f11d5a80-df2b-4899-8c02-6a568997dcec",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reinitialized existing Git repository in /Users/markxu/Desktop/github-repo/COMP432/project/.git/\n",
-      "error: remote origin already exists.\n",
-      "On branch main\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\t\u001b[31mmodified:   main.ipynb\u001b[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n",
-      "[main 6a6dc80] Initial commit\n",
-      " 1 file changed, 76 insertions(+), 2 deletions(-)\n",
-      "Username for 'https://github.com': "
-     ]
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2024-10-30T23:04:11.152816Z"
     }
-   ],
+   },
    "source": [
     "!git init\n",
     "\n",
@@ -40,7 +26,28 @@
     "\n",
     "# First-time push to set the upstream branch\n",
     "!git push -u origin main"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reinitialized existing Git repository in /Users/markxu/Desktop/github-repo/COMP432/project/.git/\r\n",
+      "error: remote origin already exists.\r\n",
+      "On branch main\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add <file>...\" to update what will be committed)\r\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\r\n",
+      "\t\u001B[31mmodified:   main.ipynb\u001B[m\r\n",
+      "\r\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n",
+      "[main 849521e] Initial commit\r\n",
+      " 1 file changed, 11 insertions(+), 16 deletions(-)\r\n",
+      "Username for 'https://github.com': "
+     ]
+    }
+   ],
+   "execution_count": null
   },
   {
    "cell_type": "code",
