--- a/main.ipynb
+++ b/main.ipynb
@@ -4,58 +4,70 @@
    "cell_type": "code",
    "id": "f11d5a80-df2b-4899-8c02-6a568997dcec",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2024-10-30T23:04:11.152816Z"
+     "end_time": "2024-10-30T23:26:28.921408Z",
+     "start_time": "2024-10-30T23:26:28.909923Z"
     }
    },
    "source": [
-    "!git init\n",
+    "# Basic library\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "!git config user.name \"Clementxu8268\"\n",
-    "!git config user.email \"kxu8268@gmail.com\"\n",
+    "# PyTorch core library\n",
+    "import torch\n",
+    "import torch.nn as nn                 # Construct network layer\n",
+    "import torch.optim as optim           # Optimizer\n",
+    "import torch.nn.functional as F       # Activation function\n",
+    "from torch.utils.data import DataLoader, Dataset   # Dataset loader\n",
     "\n",
-    "!git remote add origin git@github.com:Clementxu8268/COMP432_Project_Group_L.git\n",
+    "# torchvision library\n",
+    "import torchvision\n",
+    "from torchvision import datasets, transforms, models  # Normal datasets, transform and training model\n",
     "\n",
-    "!git status\n",
+    "# Optional library \n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix  # Evaluation\n",
+    "import seaborn as sns                            # Plot tool"
+   ],
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "id": "78f3ae36-85bb-43f1-88a3-f22324cbe312",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T23:26:30.986649Z",
+     "start_time": "2024-10-30T23:26:30.982923Z"
+    }
+   },
+   "source": [
+    "import torch\n",
     "\n",
-    "!git add .\n",
-    "!git commit -m \"Initial commit\"\n",
+    "# Check your device whether supports CUDA\n",
+    "cuda_available = torch.cuda.is_available()\n",
+    "print(\"CUDA available:\", cuda_available)\n",
     "\n",
-    "# First-time push to set the upstream branch\n",
-    "!git push -u origin main"
+    "# If it supports CUDA, print CPU's information \n",
+    "if cuda_available:\n",
+    "    print(\"GPU device name:\", torch.cuda.get_device_name(0))\n",
+    "    print(\"Number of GPUs available:\", torch.cuda.device_count())\n",
+    "    print(\"Current CUDA device:\", torch.cuda.current_device())\n",
+    "else:\n",
+    "    print(\"CUDA is not supported on this system.\")\n"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reinitialized existing Git repository in /Users/markxu/Desktop/github-repo/COMP432/project/.git/\r\n",
-      "error: remote origin already exists.\r\n",
-      "On branch main\r\n",
-      "Changes not staged for commit:\r\n",
-      "  (use \"git add <file>...\" to update what will be committed)\r\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\r\n",
-      "\t\u001B[31mmodified:   main.ipynb\u001B[m\r\n",
-      "\r\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n",
-      "[main 849521e] Initial commit\r\n",
-      " 1 file changed, 11 insertions(+), 16 deletions(-)\r\n",
-      "Username for 'https://github.com': "
+      "CUDA available: False\n",
+      "CUDA is not supported on this system.\n"
      ]
     }
    ],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78f3ae36-85bb-43f1-88a3-f22324cbe312",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 4
   }
  ],
  "metadata": {
