--- a/task2_Dataset2.ipynb
+++ b/task2_Dataset2.ipynb
@@ -9,6 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "This is the training and testing for model one",
       "Training size: 4200\n",
       "Testing size: 1800\n",
       "Epoch 1/10, Train Loss: 0.5131, Train Accuracy: 0.7948, Test Accuracy: 0.8272\n",
@@ -227,7 +228,7 @@
     "\n",
     "# Check classification accuracy on Dataset 2\n",
     "accuracy = classifier.score(features_scaled, labels_1)\n",
-    "print(f\"Classification Accuracy on Dataset 2 (using CNN Encoder from Task 1): {accuracy:.4f}\")"
+    "print(f\"Apply the model of Task 1 on Dataset2, classification Accuracy on Dataset 2 (using CNN Encoder from Task 1): {accuracy:.4f}\")"
    ]
   }
  ],
