--- a/task2_Dataset2.ipynb
+++ b/task2_Dataset2.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is the training and testing for model one",
+      "This is the training and testing for model 1:\n",
       "Training size: 4200\n",
       "Testing size: 1800\n",
       "Epoch 1/10, Train Loss: 0.5131, Train Accuracy: 0.7948, Test Accuracy: 0.8272\n",
