--- a/task1.ipynb
+++ b/task1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,7 @@
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader, random_split\n",
     "\n",
+    "# Define the transformations: resize, random horizontal flip, convert to tensor, and normalize\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((224, 224)),\n",
     "    transforms.RandomHorizontalFlip(),\n",
@@ -29,7 +30,7 @@
     "dataset_path = './ColorectalCancer'\n",
     "dataset = datasets.ImageFolder(root=dataset_path, transform=transform)\n",
     "\n",
-    "\n",
+    "# Split the dataset into 80% training and 20% validation\n",
     "train_size = int(0.8 * len(dataset))\n",
     "val_size = len(dataset) - train_size\n",
     "train_dataset, val_dataset = random_split(dataset, [train_size, val_size])\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -61,12 +62,12 @@
     "import torch.nn as nn\n",
     "from torchvision import models\n",
     "\n",
-    "\n",
+    "# Define a custom ResNet-18 model\n",
     "class CustomResNet18(nn.Module):\n",
     "    def __init__(self, num_classes=3):\n",
     "        super(CustomResNet18, self).__init__()\n",
     "        resnet = models.resnet18(pretrained=False)  \n",
-    "        self.features = nn.Sequential(*list(resnet.children())[:-1])  \n",
+    "        self.features = nn.Sequential(*list(resnet.children())[:-1])  # Exclude the final classification layer\n",
     "        self.classifier = nn.Linear(resnet.fc.in_features, num_classes) \n",
     "\n",
     "    def forward(self, x):\n",
@@ -116,10 +117,11 @@
     "import torch.optim as optim\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Define the loss function and optimizer\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
     "\n",
-    "\n",
+    "# Training settings\n",
     "num_epochs = 10\n",
     "train_losses, train_accuracies=[],[]\n",
     "test_losses, test_accuracies=[],[]\n",
@@ -130,11 +132,11 @@
     "    for images, labels in train_loader:\n",
     "        images, labels = images.to(device), labels.to(device)\n",
     "\n",
-    "       \n",
+    "        # Forward pass\n",
     "        outputs = model(images)\n",
     "        loss = criterion(outputs, labels)\n",
     "\n",
-    "       \n",
+    "        # Backpropagation and optimization\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -150,6 +152,8 @@
     "    train_losses.append(train_loss)\n",
     "    train_accuracies.append(train_accuracy)\n",
     "\n",
+    "\n",
+    "    # test\n",
     "    model.eval()\n",
     "    test_loss, test_correct, test_total = 0, 0, 0\n",
     "    with torch.no_grad():\n",
@@ -176,7 +180,7 @@
     "\n",
     "torch.save(model.state_dict(), 'final_custom_resnet18.pth')\n",
     "print(\"Final model saved.\")\n",
-    "\n",
+    "# Save the final model and the features extracted by it\n",
     "torch.save(model.features.state_dict(), 'final_feature_resnet18.pth')\n",
     "print(\"Final feature model saved.\")\n",
     "\n",
@@ -243,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +266,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "\n",
+    "# Function to extract features using the model's encoder\n",
     "def extract_features(data_loader, model):\n",
     "    model.eval()\n",
     "    features, labels = [], []\n",
@@ -278,10 +282,11 @@
     "\n",
     "\n",
     "train_features, train_labels = extract_features(train_loader, model)\n",
-    "\n",
+    "# Apply t-SNE for dimensionality reduction\n",
     "tsne = TSNE(n_components=2, random_state=42)\n",
     "reduced_features = tsne.fit_transform(train_features)\n",
     "\n",
+    "# Plot t-SNE visualization of the encoded features\n",
     "plt.figure(figsize=(10, 8))\n",
     "for label in np.unique(train_labels):\n",
     "    idx = train_labels == label\n",
