--- a/task2.ipynb
+++ b/task2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,11 +36,13 @@
     "from sklearn.manifold import TSNE\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Define a custom ResNet-18 model class that outputs only feature vectors, not classification predictions\n",
     "class CustomResNet18(torch.nn.Module):\n",
     "    def __init__(self, num_classes=3):\n",
     "        super(CustomResNet18, self).__init__()\n",
     "        resnet = models.resnet18(pretrained=False)  \n",
-    "        self.features = torch.nn.Sequential(*list(resnet.children())[:-1])  \n",
+    "        self.features = torch.nn.Sequential(*list(resnet.children())[:-1])# Extract up to the second-last layer for feature extraction\n",
+    "  \n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.features(x)  \n",
@@ -49,11 +51,12 @@
     "\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# Initialize the model and load pre-trained feature weights\n",
     "model = CustomResNet18(num_classes=3).to(device)\n",
     "model.load_state_dict(torch.load('final_feature_resnet18.pth'),strict=False) \n",
     "model.eval()  \n",
     "\n",
-    "\n",
+    "# Define transformations: resize, horizontal flip, convert to tensor, and normalize as per ImageNet standards\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((224, 224)),\n",
     "    transforms.RandomHorizontalFlip(),\n",
@@ -61,10 +64,12 @@
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
     "])\n",
     "\n",
+    "# Load Dataset 2 (Prostate Cancer) with defined transformations and batch size\n",
     "dataset2_path = './Dataset2/ProstateCancer'\n",
     "dataset2 = datasets.ImageFolder(root=dataset2_path, transform=transform)\n",
     "data_loader2 = DataLoader(dataset2, batch_size=32, shuffle=False, num_workers=4)\n",
     "\n",
+    "# Function to extract features and labels from the dataset using the model\n",
     "def extract_features(data_loader, model):\n",
     "    model.eval()  \n",
     "    features, labels = [], []\n",
@@ -78,10 +83,10 @@
     "    labels = np.concatenate(labels)  \n",
     "    return features, labels\n",
     "\n",
-    "\n",
+    "# Extract features and labels from Dataset 2\n",
     "features2, labels2 = extract_features(data_loader2, model)\n",
     "\n",
-    "\n",
+    "# Apply t-SNE for dimensionality reduction to 2D for visualization\n",
     "tsne = TSNE(n_components=2, random_state=42)\n",
     "reduced_features = tsne.fit_transform(features2)\n",
     "\n",
@@ -115,8 +120,11 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "\n",
+    "# Split features and labels into training and testing sets (80/20 split)\n",
     "X_train, X_test, y_train, y_test = train_test_split(features2, labels2, test_size=0.2, random_state=42)\n",
     "\n",
+    "# Train a Logistic Regression classifier on the extracted features\n",
     "clf = LogisticRegression(max_iter=1000, random_state=42)\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
