--- a/task3.ipynb
+++ b/task3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,8 @@
     "from sklearn.manifold import TSNE\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
+    "# Define a custom ResNet-18 model class that outputs only feature vectors, not classification predictions\n",
     "class CustomResNet18(torch.nn.Module):\n",
     "    def __init__(self, num_classes=3):\n",
     "        super(CustomResNet18, self).__init__()\n",
@@ -49,22 +51,25 @@
     "\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Initialize the model and load pre-trained feature weights\n",
     "model = CustomResNet18(num_classes=3).to(device)\n",
     "model.load_state_dict(torch.load('final_feature_resnet18.pth'),strict=False) \n",
     "model.eval()  \n",
     "\n",
-    "\n",
+    "# Define transformations: resize, horizontal flip, convert to tensor, and normalize as per ImageNet standards\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((224, 224)),\n",
     "    transforms.RandomHorizontalFlip(),\n",
     "    transforms.ToTensor(),  \n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])])\n",
     "\n",
-    "\n",
+    "# Load Dataset 3 (Prostate Cancer) with defined transformations and batch size\n",
     "dataset2_path = './Dataset3/AnimalFaces'\n",
     "dataset2 = datasets.ImageFolder(root=dataset2_path, transform=transform)\n",
     "data_loader2 = DataLoader(dataset2, batch_size=32, shuffle=False, num_workers=4)\n",
     "\n",
+    "# Function to extract features and labels from the dataset using the model\n",
     "def extract_features(data_loader, model):\n",
     "    model.eval()  \n",
     "    features, labels = [], []\n",
@@ -78,8 +83,10 @@
     "    labels = np.concatenate(labels)  \n",
     "    return features, labels\n",
     "\n",
+    "# Extract features and labels from Dataset 3\n",
     "features2, labels2 = extract_features(data_loader2, model)\n",
     "\n",
+    "# Apply t-SNE for dimensionality reduction to 2D for visualization\n",
     "tsne = TSNE(n_components=2, random_state=42)\n",
     "reduced_features = tsne.fit_transform(features2)\n",
     "\n",
