update file name

--- a/pretrain_dataset2resnet18.ipynb
+++ b/pretrain_dataset2resnet18.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
     "])\n",
     "\n",
-    "# 加载 Dataset 2（假设 Dataset 2 存在于 './Dataset2/ProstateCancer' 目录）\n",
+    "# 加载 Dataset 2\n",
     "dataset2 = datasets.ImageFolder(root='./Dataset2/ProstateCancer', transform=transform)\n",
     "\n",
     "# 创建数据加载器\n",
