--- a/task1.ipynb
+++ b/task1.ipynb
@@ -178,8 +178,8 @@
     "\n",
     "\n",
     "\n",
-    "torch.save(model.state_dict(), 'final_custom_resnet18.pth')\n",
-    "print(\"Final model saved.\")\n",
+    "# torch.save(model.state_dict(), 'final_custom_resnet18.pth')\n",
+    "# print(\"Final model saved.\")\n",
     "# Save the final model and the features extracted by it\n",
     "torch.save(model.features.state_dict(), 'final_feature_resnet18.pth')\n",
     "print(\"Final feature model saved.\")\n",
