--- a/task2_dataset2.ipynb
+++ b/task2_dataset2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,25 +36,25 @@
     "from sklearn.manifold import TSNE\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Step 1: 定义自定义的 ResNet18 编码器\n",
+    "# Define the transformations: resize, random horizontal flip, convert to tensor, and normalize\n",
     "class CustomResNet18(torch.nn.Module):\n",
     "    def __init__(self):\n",
     "        super(CustomResNet18, self).__init__()\n",
-    "        resnet = models.resnet18(pretrained=False)  # 不加载 ImageNet 权重\n",
-    "        self.features = torch.nn.Sequential(*list(resnet.children())[:-1])  # 移除分类层\n",
+    "        resnet = models.resnet18(pretrained=False) \n",
+    "        self.features = torch.nn.Sequential(*list(resnet.children())[:-1]) \n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.features(x)  # 提取特征\n",
-    "        x = x.view(x.size(0), -1)  # 展平特征图\n",
+    "        x = self.features(x) \n",
+    "        x = x.view(x.size(0), -1) \n",
     "        return x\n",
     "\n",
-    "# Step 2: 初始化设备和加载模型\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = CustomResNet18().to(device)  # 修复实例化问题\n",
-    "model.load_state_dict(torch.load('final_feature_resnet18.pth'), strict=False)  # 加载预训练权重\n",
-    "model.eval()  # 设置为评估模式\n",
     "\n",
-    "# Step 3: 定义数据预处理和数据加载器\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = CustomResNet18().to(device) \n",
+    "model.load_state_dict(torch.load('final_feature_resnet18.pth'), strict=False) \n",
+    "model.eval() \n",
+    "\n",
+    "\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((224, 224)),\n",
     "    transforms.ToTensor(),\n",
@@ -65,28 +65,26 @@
     "dataset2 = datasets.ImageFolder(root=dataset2_path, transform=transform)\n",
     "data_loader2 = DataLoader(dataset2, batch_size=32, shuffle=False, num_workers=4)\n",
     "\n",
-    "# Step 4: 特征提取函数\n",
+    "\n",
     "def extract_features(data_loader, model):\n",
     "    model.eval()\n",
     "    features, labels = [], []\n",
     "    with torch.no_grad():\n",
     "        for images, label in data_loader:\n",
-    "            images = images.to(device)  # 转到计算设备\n",
-    "            output = model(images)  # 提取特征\n",
-    "            features.append(output.cpu().numpy())  # 转到CPU并转换为NumPy数组\n",
+    "            images = images.to(device)  \n",
+    "            output = model(images) \n",
+    "            features.append(output.cpu().numpy())  \n",
     "            labels.append(label.numpy())\n",
-    "    features = np.concatenate(features)  # 拼接所有特征\n",
-    "    labels = np.concatenate(labels)  # 拼接所有标签\n",
+    "    features = np.concatenate(features) \n",
+    "    labels = np.concatenate(labels) \n",
     "    return features, labels\n",
     "\n",
-    "# 提取特征和标签\n",
     "features2, labels2 = extract_features(data_loader2, model)\n",
-    "\n",
-    "# Step 5: t-SNE 可视化\n",
-    "tsne = TSNE(n_components=2, random_state=42)  # t-SNE 降维到二维\n",
+    "# Apply t-SNE for dimensionality reduction\n",
+    "tsne = TSNE(n_components=2, random_state=42)  \n",
     "reduced_features = tsne.fit_transform(features2)\n",
     "\n",
-    "# 绘制散点图\n",
+    "# Plot t-SNE visualization of the encoded features\n",
     "plt.figure(figsize=(10, 8))\n",
     "for label in np.unique(labels2):\n",
     "    idx = labels2 == label\n",
