--- a/main.ipynb
+++ b/main.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "f11d5a80-df2b-4899-8c02-6a568997dcec",
    "metadata": {
     "ExecuteTime": {
@@ -9,6 +10,7 @@
      "start_time": "2024-10-30T23:26:28.909923Z"
     }
    },
+   "outputs": [],
    "source": [
     "# Basic library\n",
     "import os\n",
@@ -29,12 +31,11 @@
     "# Optional library \n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix  # Evaluation\n",
     "import seaborn as sns                            # Plot tool"
-   ],
-   "outputs": [],
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "78f3ae36-85bb-43f1-88a3-f22324cbe312",
    "metadata": {
     "ExecuteTime": {
@@ -42,6 +43,18 @@
      "start_time": "2024-10-30T23:26:30.982923Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA available: True\n",
+      "GPU device name: NVIDIA GeForce RTX 4070\n",
+      "Number of GPUs available: 1\n",
+      "Current CUDA device: 0\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -56,18 +69,15 @@
     "    print(\"Current CUDA device:\", torch.cuda.current_device())\n",
     "else:\n",
     "    print(\"CUDA is not supported on this system.\")\n"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA available: False\n",
-      "CUDA is not supported on this system.\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4594434b-b299-4495-9cb8-cc631026d8b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -86,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
