Add confusion matrix

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "f11d5a80-df2b-4899-8c02-6a568997dcec",
    "metadata": {
     "ExecuteTime": {
@@ -13,9 +13,11 @@
    "outputs": [],
    "source": [
     "# Basic library\n",
+    "import gdown\n",
     "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
     "\n",
     "# PyTorch core library\n",
     "import torch\n",
@@ -29,13 +31,12 @@
     "from torchvision import datasets, transforms, models  # Normal datasets, transform and training model\n",
     "\n",
     "# Optional library \n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix  # Evaluation\n",
-    "import seaborn as sns                            # Plot tool"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix  # Evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "78f3ae36-85bb-43f1-88a3-f22324cbe312",
    "metadata": {
     "ExecuteTime": {
@@ -56,8 +57,6 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "\n",
     "# Check your device whether supports CUDA\n",
     "cuda_available = torch.cuda.is_available()\n",
     "print(\"CUDA available:\", cuda_available)\n",
@@ -68,13 +67,13 @@
     "    print(\"Number of GPUs available:\", torch.cuda.device_count())\n",
     "    print(\"Current CUDA device:\", torch.cuda.current_device())\n",
     "else:\n",
-    "    print(\"CUDA is not supported on this system.\")\n"
+    "    print(\"CUDA is not supported on this system.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4594434b-b299-4495-9cb8-cc631026d8b2",
+   "id": "68dd41bf-6a22-4bfb-909c-73218992c58a",
    "metadata": {},
    "outputs": [],
    "source": []
