Add readme and dataset download

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "f11d5a80-df2b-4899-8c02-6a568997dcec",
    "metadata": {
     "ExecuteTime": {
@@ -13,7 +13,6 @@
    "outputs": [],
    "source": [
     "# Basic library\n",
-    "import gdown\n",
     "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "78f3ae36-85bb-43f1-88a3-f22324cbe312",
    "metadata": {
     "ExecuteTime": {
@@ -72,8 +71,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "c6d21725-051f-422f-bada-b1527340e8e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Setup Status:\n",
+      "✔ Dataset1: Setup OK\n",
+      "✔ Dataset2: Setup OK\n",
+      "✔ Dataset3: Setup OK\n",
+      "All datasets are correctly set up!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dataset download\n",
+    "\n",
+    "# Dataset Setup Instructions\n",
+    "# ==========================\n",
+    "# This project requires three datasets to be manually downloaded and placed in the root directory.\n",
+    "# \n",
+    "# Steps:\n",
+    "# 1. Download the datasets from the following URLs:\n",
+    "#    - Dataset 1: https://drive.google.com/drive/folders/1t3KajrWrV756rKBe0H2-qXxUG-e3tQBF?usp=drive_link\n",
+    "#    - Dataset 2: https://drive.google.com/drive/folders/15tEA6I0YETiZjBa0ACdWzWXGG0lBl2fm?usp=drive_link\n",
+    "#    - Dataset 3: https://drive.google.com/drive/folders/12OqwIkygpRoYVtNo-oBfvfnTuNSSy32b?usp=drive_link\n",
+    "# \n",
+    "# 2. Extract the datasets into the root directory of this project.\n",
+    "#    After extraction, the structure should look like:\n",
+    "#    my_project/\n",
+    "#    ├── Dataset1/\n",
+    "#    ├── Dataset2/\n",
+    "#    ├── Dataset3/\n",
+    "#    ├── notebook.ipynb\n",
+    "#    └── other_project_files/\n",
+    "#\n",
+    "# 3. Make sure the dataset folders are directly accessible and have the necessary read permissions.\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "# Paths to the datasets\n",
+    "dataset1_path = \"./Dataset1\"\n",
+    "dataset2_path = \"./Dataset2\"\n",
+    "dataset3_path = \"./Dataset3\"\n",
+    "\n",
+    "# Initialize a dictionary to track status\n",
+    "dataset_status = {\n",
+    "    \"Dataset1\": os.path.exists(dataset1_path),\n",
+    "    \"Dataset2\": os.path.exists(dataset2_path),\n",
+    "    \"Dataset3\": os.path.exists(dataset3_path),\n",
+    "}\n",
+    "\n",
+    "# Print status for each dataset\n",
+    "print(\"Dataset Setup Status:\")\n",
+    "for dataset, status in dataset_status.items():\n",
+    "    if status:\n",
+    "        print(f\"✔ {dataset}: Setup OK\")\n",
+    "    else:\n",
+    "        print(f\"✘ {dataset}: Missing\")\n",
+    "\n",
+    "# Raise an error if any dataset is missing\n",
+    "if not all(dataset_status.values()):\n",
+    "    missing_datasets = [dataset for dataset, status in dataset_status.items() if not status]\n",
+    "    raise FileNotFoundError(\n",
+    "        f\"The following datasets are missing: {', '.join(missing_datasets)}. \"\n",
+    "        \"Please ensure they are placed in the root directory.\"\n",
+    "    )\n",
+    "else:\n",
+    "    print(\"All datasets are correctly set up!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "68dd41bf-6a22-4bfb-909c-73218992c58a",
+   "id": "c7008e4b-c356-43d1-b806-11a5b9556737",
    "metadata": {},
    "outputs": [],
    "source": []
